--- a/scss/layouts/_terms-and-conditions.scss
+++ b/scss/layouts/_terms-and-conditions.scss
@@ -5,6 +5,7 @@
     text-align: center;
   }
   h1{
+    text-align: $left;
     color: $basic-gray;
     @include font-size(40px);
     @include opacity(0.8);
@@ -12,24 +13,28 @@
     margin-bottom: 30px;
   }
   h3{
+    text-align: $left;
     color: $basic-gray;
     @include font-size(30px);
     @include opacity(0.8);
     font-weight: 400;
   }
   p{
+    text-align: $left;
     color: $basic-gray;
     @include font-size(16px);
     @include opacity(0.6);
     font-weight: 400;
   }
   li{
+    text-align: $left;
     color: $basic-gray;
     @include font-size(14px);
     @include opacity(0.6);
     font-weight: 400;
   }
   h4{
+    text-align: $left;
     color: $basic-gray;
     background: $brand-color;
     width: fit-content;
