--- a/scss/layouts/_search_result.scss
+++ b/scss/layouts/_search_result.scss
@@ -387,12 +387,16 @@
       }
     }
     &.disabled{
-      a{
+      i{
         cursor: default;
         @include opacity(0.1);
       }
     }
-
+    &.prev{
+      a{
+      @include opacity(1);
+      }
+    }
   }
 }
 .filter-result{
