--- a/src/scss/modules/_components.scss
+++ b/src/scss/modules/_components.scss
@@ -890,6 +890,7 @@
     }
     &.on{
       label{
+        z-index: 10;
         top: 7px;
         margin-top: 0;
         @include font-size(13px);
