--- a/src/scss/state/checkout/_order_summary.scss
+++ b/src/scss/state/checkout/_order_summary.scss
@@ -1,71 +1,74 @@
-#order-summary {
+.order-summary{
   @include text-left;
-  h5 {
-    font-family: Roboto;
-    @include font-size(25px);
-    text-transform: capitalize;
-    color: $basic-gray;
+  @include border-radius-div;
+  @include box-shadow;
+  margin-bottom: 40px;
+  @include media-breakpoint-down(md){
+    margin-top: 40px;
   }
-  .order-summary__text-muted,
-  .item-key {
-    opacity: 0.7;
-    font-family: Roboto;
-    @include font-size(13px);
-    line-height: 1.31;
-    letter-spacing: normal;
-    text-align: $left;
-    color: $dark-70;
-  }
-  .order-summary__details {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 32px;
-    span {
-      flex: 0 50%;
+  > header{
+    padding: 20px 20px 15px;
+    background: $white;
+    margin-bottom: 2px;
+    h2{
+      @include font-size(26px);
+      margin-bottom: 2px;
+      font-weight: 400;
     }
-    .item-value {
-      text-align: end;
-      font-family: Roboto;
-      @include font-size(17px);
-      line-height: 1;
-      color: $black;
-
-      > span {
-        font-family: Roboto;
-        @include font-size(11px);
-        color: $black;
-        padding-#{$left}: 3px;
+    span{
+      @include font-size(13px);
+      @include opacity(0.7);
+    }
+  }
+  > ul{
+    background: $white;
+    margin: 0;
+    padding: side-values(0 20px);
+    li{
+      border-bottom: 1px solid $dark-gray;
+      padding: 15px 0;
+      line-height: 15px;
+      label{
+        @include font-size(13px);
+        @include opacity(0.7);
+        display: inline-block;
+        text-transform: capitalize;
+        margin-bottom: 0;
+      }
+      p{
+        @include font-size(18px);
+        float: #{$right};
+        margin-bottom: 0;
+        span{
+          text-transform: uppercase;
+          @include font-size(12px);
+          margin-#{$left}: 2px;
+        }
+      }
+      &:last-child{
+        border-bottom-width: 0;
       }
     }
-
-    .h-seperator {
-      background: #ececec;
-      height: 1px;
-      margin-bottom: 16px;
-      margin-top: 17px;
-    }
   }
-  .order-summary__header {
-    .h-seperator {
-      position: absolute;
-      background: $light-gray;
-      height: 2px;
-      #{$left}: 0;
-      margin-top: 16px;
-    }
-  }
-  .btn-primary {
+  > .btn-primary{
     width: 100%;
-    border-radius: corner-values(0 0 20px 20px) !important;
-    text-align: $right;
+    text-align: #{$right};
     text-transform: capitalize;
-  }
-  button {
-    @include font-size(20px);
-
-    i {
-      padding-#{$left}: 7px;
+    @extend .mt-2;
+    @include font-size(19px);
+    line-height: 27px;
+    border-top-#{$right}-radius: 0 !important;
+    i{
+      height: 23px;
+      margin-#{$left}: 10px;
+      &:before{
+        @include font-size(23px);
+        top: 2px;
+      }
+    }
+    &:hover,
+    &:focus{
+      padding-#{$right}: 30px;
     }
   }
 }
